# PruebaTecnica-CrecerLab

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: celery_worker.py  main.py
app/events/: routes.py  schemas.py  service.py
app/tests/: test_events_api.py
