[tool.poetry]
name = "prueba técnica fastapi - crecerlab"
version = "0.1.0"
description = "Prueba Técnica FastAPI, Celery & Docker."
authors = ["Omar Núñez"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
pydantic = "^2.10.3"
uvicorn = "^0.34.0"
redis = "^5.2.1"
celery = "^5.4.0"
flower = "^2.0.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
